[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/LineOfSightTrigger.gd" type="Script" id=1]
[ext_resource path="res://Resources/LineOfSight-EditorIcon.png" type="Texture" id=2]

[node name="LineOfSightTrigger" type="Node2D"]
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.499999, 1.5 )
scale = Vector2( 2.45, 1.15 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
